# learn_vio

./: .gitignore  .gitmodules
c1/c1_2/: CMakeLists.txt  main.cpp
c3/CurveFitting_LM/: draw_plot_2d.py  lambda.txt
c3/CurveFitting_LM/app/: CurveFitting.cpp
c3/CurveFitting_LM/backend/: problem.cc  problem.h
c4/nullspace_test/: hessian_nullspace_test.cpp
c5/BA_schur/app/: TestMonoBA.cpp
c5/BA_schur/backend/: problem.cc  problem.h  vertex.h
c6/course6_hw/: triangulate.cpp
c7/vins_sys_code/: CMakeLists.txt
c7/vins_sys_code/config/sim/: sim_config.yaml
c7/vins_sys_code/include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h
c7/vins_sys_code/include/backend/: edge.h  problem.h
c7/vins_sys_code/include/factor/: integration_base.h
c7/vins_sys_code/python_tool/: draw_trajcory.py
c7/vins_sys_code/src/: System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp
c7/vins_sys_code/src/backend/: edge.cc  edge_imu.cc  (+1 more)
c7/vins_sys_code/test/: CurveFitting.cpp  run_euroc.cpp  run_sim.cpp  run_sim_loop.cpp
project/curve_fitting/: CMakeLists.txt  main.cpp
project/vins_sys_code/: CMakeLists.txt
project/vins_sys_code/config/: euroc_config.yaml
project/vins_sys_code/include/: System.h  estimator.h  parameters.h
project/vins_sys_code/python_tool/: draw_function.py  draw_plot_2d.py  draw_trajcory2.py
project/vins_sys_code/src/: System.cpp  estimator.cpp  feature_tracker.cpp  parameters.cpp
project/vins_sys_code/test/: CurveFitting.cpp  run_euroc.cpp  run_euroc_loop.cpp  run_sim.cpp  run_sim_loop.cpp
(+1215 files in other folders)
